methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:51: error: Unmatched closing brace '}' ignored here
}
^