methods.picture.PatternPicture.scala.code
override def run() {
  for (i <-1 to 4)
  faireMotif()
}
 

def faireMotif()
 avance()
 setCouleurBrosse(Color.RED)
 baisseBrosse()
 leveBrosse()
 avance()
 setCouleurBrosse(Color.BLUE)
 baisseBrosse()
 leveBrosse()
 avance()
 gauche()
 avance()
 setCouleurBrosse(Color.BLUE)
 baisseBrosse()
 leveBrosse()
 avance()
 setCouleurBrosse(Color.GREEN)
 baisseBrosse()
 leveBrosse()
 avance()
 gauche()
avance()
 setCouleurBrosse(Color.GREEN)
 baisseBrosse()
 leveBrosse()
 avance()
 setCouleurBrosse(Color.YELLOW)
 baisseBrosse()
 leveBrosse()
 avance()
 gauche()
avance()
 setCouleurBrosse(Color.YELLOW)
 baisseBrosse()
 leveBrosse()
 avance()
 setCouleurBrosse(Color.RED)
 baisseBrosse()
 leveBrosse()
 avance()
}

